# genshin-daily-plasmoid

./: CMakeLists.txt  Messages.sh
package/: metadata.json
package/contents/code/: utils.js
package/contents/config/: config.qml  main.xml
package/contents/ui/: GenshinFull.qml  GenshinHutao.qml  GenshinIcon.qml  configConfiguration.qml  configPreferences.qml  configProxy.qml  main.qml
plugin/: CMakeLists.txt  genshindaily.cpp  genshindaily.h  genshindailyplugin.cpp  genshindailyplugin.h  qmldir
